--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
+    "eas-cli": "^0.49.0",
+    "expo": "^44.0.6",
+    "expo-build-properties": "^0.8.3",
+    "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-webview": "11.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
